[package]
name = "tokau"
version = "0.1.0"
edition = "2024"
authors = ["Jonas Sunde <jonasrsv42@gmail.com>"]
description = "A Rust library for handling LLM token spaces"
license = "MIT"
repository = "https://github.com/jonasrsv42/tokau"
keywords = ["llm", "tokenizer", "nlp", "tokens", "ai"]
categories = ["text-processing", "encoding"]

[dependencies]

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
